# tui-launcher

./: Cargo.nix  Cargo.toml  default.nix  flake.nix
src/: config.rs  main.rs  matching.rs
