[package]
name = "app-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
ascii-forge = "0.3.0"
forge-widgets = { git = "https://github.com/TheEmeraldBee/forge-extensions.git" }
crossterm = { version = "0.28.1", features = ["serde"] }
dirs = "5.0.1"
hyprland = "0.3.13"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
